syntax ="proto3";
option go_package = "./proto";
package authService;

service authService{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);

}

message RegisterRequest{
    string username = 1;
    string password = 2;
}

message RegisterResponse{
    bool success = 1;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message LogoutRequest{
    string token = 1;
}

message LogoutResponse{
    bool success = 1;
}